package com.example.wxson.morsetoy;

/**
 * Created by wxson on 2017/8/4.
 *
 */

interface IArrayMapForCoding {
    String GetMorseCode(char _char);
}
