@startuml

title __MORSETOY's Class Diagram__\n

  namespace com.example.wxson.morsetoy {
    class com.example.wxson.morsetoy.UppercaseTransformationMethod {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    class com.example.wxson.morsetoy.ArrayMapForCoding {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    class com.example.wxson.morsetoy.ArrayMapForCodingFactory {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    class com.example.wxson.morsetoy.BuildConfig {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    class com.example.wxson.morsetoy.CoderContext {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    interface com.example.wxson.morsetoy.IArrayMapForCoding {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    interface com.example.wxson.morsetoy.ICoder {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    interface com.example.wxson.morsetoy.IInputWavStreamCache {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    interface com.example.wxson.morsetoy.IAudioFileMaker {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    interface com.example.wxson.morsetoy.IMorseAudioFileMaker {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    interface com.example.wxson.morsetoy.IMorsePlayer {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    class com.example.wxson.morsetoy.InputWavStreamCache {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    class com.example.wxson.morsetoy.MainActivity {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    class com.example.wxson.morsetoy.AudioFileMaker {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    class com.example.wxson.morsetoy.MorseAudioFileMaker {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    class com.example.wxson.morsetoy.MorseCoder {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    class com.example.wxson.morsetoy.MorsePlayer {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    class com.example.wxson.morsetoy.MorsePlayerFactory {
    }
  }
  

  namespace com.example.wxson.morsetoy {
    class com.example.wxson.morsetoy.WavFileHeader {
    }
  }
  

  com.example.wxson.morsetoy.UppercaseTransformationMethod -up-|> android.text.method.ReplacementTransformationMethod
  com.example.wxson.morsetoy.ArrayMapForCoding .up.|> com.example.wxson.morsetoy.IArrayMapForCoding
  com.example.wxson.morsetoy.CoderContext o-- com.example.wxson.morsetoy.ICoder : coder
  com.example.wxson.morsetoy.InputWavStreamCache .up.|> com.example.wxson.morsetoy.IInputWavStreamCache
  com.example.wxson.morsetoy.MainActivity .up.|> pub.devrel.easypermissions.EasyPermissions.PermissionCallbacks
  com.example.wxson.morsetoy.MainActivity -up-|> android.support.v7.app.AppCompatActivity
  com.example.wxson.morsetoy.AudioFileMaker .up.|> com.example.wxson.morsetoy.IAudioFileMaker
  com.example.wxson.morsetoy.MorseAudioFileMaker .up.|> com.example.wxson.morsetoy.IMorseAudioFileMaker
  com.example.wxson.morsetoy.MorseAudioFileMaker o-- com.example.wxson.morsetoy.IAudioFileMaker : makeAudioFile
  com.example.wxson.morsetoy.MorseCoder .up.|> com.example.wxson.morsetoy.ICoder
  com.example.wxson.morsetoy.MorseCoder o-- com.example.wxson.morsetoy.IArrayMapForCoding : arrayMapForCoding
  com.example.wxson.morsetoy.MorsePlayer .up.|> com.example.wxson.morsetoy.IMorsePlayer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
